// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <input
    class="sc-AxjAm fwkVBO"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a danger color 1`] = `
<div>
  <input
    class="sc-AxjAm ccPzlG"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a primary color 1`] = `
<div>
  <input
    class="sc-AxjAm eNnlcJ"
    color="primary"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a success color 1`] = `
<div>
  <input
    class="sc-AxjAm fwkVBO"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render a warning color 1`] = `
<div>
  <input
    class="sc-AxjAm hWhmHj"
    color="warning"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox should render thick variant 1`] = `
<div>
  <input
    class="sc-AxjAm hDPZJC"
    color="success"
    type="checkbox"
  />
</div>
`;
